# Optim_VSTRAP

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.user.084d65b.21  CMakeLists.txt.user.358b6f8.4.8-pre1  CMakeLists_UBUNTU.txt  CMakeLists_Uni_Desktop.txt  Optim_VSTRAP.kdev4  Optim_VSTRAP.pro  Optim_input_73.xml  Optim_input_MASTER.xml  README.md  formatting.txt  main.cpp  runCoverage.sh  setup.sh
.circleci/: config.yml  setup.sh
.kdev4/: Optim_VSTRAP.kdev4
MOTIONS-toolset/: pvpython
data/: Optim_input.xml  check_input.py  copy_command  csv_dummy_particles.csv  test_optimization.sh  test_optimization_position_sameAdjointpercell.sh  test_optimization_weight.sh
documentation/: Doxyfile  RefactoringParameterNames.txt  srcLOC.txt
optim-vstrap-toolset/: adjoint_particle_creator.cc  optim-vstrap-toolset.kdev4  tikz_template.tex
pprc/: Visualize_BGF.nb  applying_optimal_control.pvsm  create_video  current_iteration_linux.pvsm  current_iteration_linux_100plasmastate.pvsm  current_iteration_linux_10plasmastate.pvsm  current_iteration_linux_clip.pvsm  lcov_local  plasma_state_forward.pvsm  post_processing_convergence.py  pprc_figures.sh  python_current_iteration.py  python_current_iteratrion.py  read_xml_test.py  test.tex  test_figure.py  test_py2tikz.tex
results/: brockett.csv  control_1.csv  control_10.csv  control_11.csv  control_12.csv  control_13.csv  (+94 more)
src/: CMakeLists.txt  main.cc  main.cpp
src/controller/: abstract_controller.cpp  abstract_controller.h  abstractcontroller.cc  abstractcontroller.cpp  abstractcontroller.h  desired_trajectory_controller.cpp  desired_trajectory_controller.h  desiredtrajectorycontroller.cc  desiredtrajectorycontroller.cpp  desiredtrajectorycontroller.h  equation_solving_controller.cpp  equation_solving_controller.h  equationsolvingcontroller.cc  equationsolvingcontroller.cpp  equationsolvingcontroller.h  initializer.cpp  initializer.h  optim_controller.cpp  optim_controller.h  optimcontroller.cc  optimcontroller.cpp  optimcontroller.h  pdf_controller.cpp  pdf_controller.h  pdfcontroller.cc  pdfcontroller.cpp  pdfcontroller.h
src/io/: input.cc  input.cpp  input.h  output_control_update.cpp  output_control_update.h  output_diagnostics.cpp  output_diagnostics.h  outputcontrolupdate.cc  outputcontrolupdate.cpp  outputcontrolupdate.h  outputdiagnostics.cc  outputdiagnostics.cpp  outputdiagnostics.h
src/io/tinyXML/: tinyxml.cc  tinyxml.cpp  tinyxml.h  tinyxmlerror.cc  tinyxmlparser.cc
src/logger/: logger.cc  logger.cpp  logger.h
src/objects/: MOTIONS.cc  MOTIONS.cpp  MOTIONS.h  comparator.cc  comparator.cpp  comparator.h  coordinate_phase_space_time.cpp  coordinate_phase_space_time.h  coordinatephasespacetime.cc  coordinatephasespacetime.h  data_provider.cpp  data_provider.h  dataprovider.cc  dataprovider.cpp  dataprovider.h  doublepdf.cc  doublepdf.h  optimizationparameters.cpp  optimizationparameters.h  particle.cc  particle.cpp  particle.h
src/optim/: optim_controller.cpp  optim_controller.h
src/optimization/: gradient_calculator.cpp  gradient_calculator.h  gradientcalculator.cc  gradientcalculator.cpp  gradientcalculator.h  objective_calculator.cpp  objective_calculator.h  objectivecalculator.cc  objectivecalculator.cpp  objectivecalculator.h  stepdirection_controller.cpp  stepdirection_controller.h  stepdirectioncontroller.cc  stepdirectioncontroller.h  stepsize_controller.cpp  stepsize_controller.h  stepsizecontroller.cc  stepsizecontroller.h
src/tools/: calculus.cc  calculus.cpp  calculus.h  inner_products.cpp  inner_products.h  innerproducts.cc  innerproducts.cpp  innerproducts.h  linear_algebra.cpp  linear_algebra.h  parameter_sanity.cpp  parameter_sanity.h  parametersanity.cc  parametersanity.cpp  parametersanity.h
test/: CMakeLists.txt  code_coverage  main.cc  main.cpp  test_io.cpp  test_io.h  test_main.cpp  test_main.h
test/basic/: test_io.cpp  test_io.h
test/controller/: desired_trajectory_controller.h  desiredtrajectorycontroller.h  equation_solving_controller.h  equationsolvingcontroller.h  optim_controller.h  optimcontroller.h  pdf_controller.h  pdfcontroller.h
test/data/: Optim_input_gTest.xml  control_field_cells.xml  input_backward.xml  input_forward.xml  interpolated_control_field.xml  testGradient.csv  test_particle_reader.csv
test/data/global/: box_vol_regular_small_fine.xml  init_cond_small.csv  interaction_data.xml  interaction_data_mcc.xml
test/data/global/mesh/: box_coarse.msh.opt  meshConverter.py
test/data/vstrap/: VSTRAP.cbp
test/data/vstrap_test_output/: plasma_state_batch_1_adjoint_particles_CPU_1.csv  plasma_state_batch_1_adjoint_particles_CPU_10.csv  plasma_state_batch_1_adjoint_particles_CPU_2.csv  plasma_state_batch_1_adjoint_particles_CPU_3.csv  plasma_state_batch_1_adjoint_particles_CPU_4.csv  plasma_state_batch_1_adjoint_particles_CPU_5.csv  plasma_state_batch_1_adjoint_particles_CPU_6.csv  plasma_state_batch_1_adjoint_particles_CPU_7.csv  plasma_state_batch_1_adjoint_particles_CPU_8.csv  plasma_state_batch_1_adjoint_particles_CPU_9.csv  plasma_state_batch_1_forward_particles_CPU_1.csv  plasma_state_batch_1_forward_particles_CPU_10.csv  plasma_state_batch_1_forward_particles_CPU_2.csv  plasma_state_batch_1_forward_particles_CPU_3.csv  plasma_state_batch_1_forward_particles_CPU_4.csv  plasma_state_batch_1_forward_particles_CPU_5.csv  plasma_state_batch_1_forward_particles_CPU_6.csv  plasma_state_batch_1_forward_particles_CPU_7.csv  plasma_state_batch_1_forward_particles_CPU_8.csv  plasma_state_batch_1_forward_particles_CPU_9.csv
test/io/: input_test.h  output_control_update.h  output_diagnostics.h  outputcontrolupdate.h  outputdiagnostics.h
test/objects/: coordinate_phase_space_time.h  coordinatephasespacetime.h  data_provider.h  dataprovider.h  particle.h
test/optimization/: gradient_calculator.h  gradientcalculator.h  objective_calculator.h  objectivecalculator.h  stepdirection_controller.h  stepdirectioncontroller.h  stepsize_controller.h  stepsizecontroller.h
test/tools/: calculus.h  inner_products.h  innerproducts.h  parameter_sanity.h  parametersanity.h
(+1616 files in other folders)
